--- a/app/locale/en_US/Mage_Review.csv
+++ b/app/locale/en_US/Mage_Review.csv
@@ -22,9 +22,12 @@
 "Back to Main Product Info","Back to Main Product Info"
 "Back to My Reviews","Back to My Reviews"
 "Back to Product Reviews","Back to Product Reviews"
+"Be the First to Review","Be the First to Review"
 "Be the first to review this product","Be the first to review this product"
+"Cancel","Cancel"
 "Catalog Product Reviews List","Catalog Product Reviews List"
 "Catalog Product Review View","Catalog Product Review View"
+"Close","Close"
 "Created On","Created On"
 "Customer","Customer"
 "Customer My Account Product Reviews","Customer My Account Product Reviews"
@@ -35,8 +38,10 @@
 "Delete Review","Delete Review"
 "Detailed Rating","Detailed Rating"
 "Edit Review '%s'","Edit Review '%s'"
+"Give your review a title","Give your review a title"
 "Guest","Guest"
 "How do you rate this product?","How do you rate this product?"
+"How should we call you?","How should we call you?"
 "ID","ID"
 "Let us know your thoughts","Let us know your thoughts"
 "Manage Ratings","Manage Ratings"
@@ -52,6 +57,7 @@
 "Pending","Pending"
 "Pending Reviews","Pending Reviews"
 "Pending Reviews of Customer `%s`","Pending Reviews of Customer `%s`"
+"Please select a rating for each category","Please select a rating for each category"
 "Please select one of each of the ratings above","Please select one of each of the ratings above"
 "Posted By","Posted By"
 "Price","Price"
@@ -74,9 +80,11 @@
 "Reviews and Ratings","Reviews and Ratings"
 "Review summary can't be empty","Review summary can't be empty"
 "Save Review","Save Review"
+"Share your experience with this product","Share your experience with this product"
 "SKU","SKU"
 "Status","Status"
 "Submit Review","Submit Review"
+"Summary","Summary"
 "Summary of Review","Summary of Review"
 "Summary of Your Review","Summary of Your Review"
 "Summary Rating","Summary Rating"
@@ -89,6 +97,7 @@
 "Visible In","Visible In"
 "Websites","Websites"
 "What's your nickname?","What's your nickname?"
+"Write a Review","Write a Review"
 "Write Your Own Review","Write Your Own Review"
 "You're reviewing:","You're reviewing:"
 "You have submitted no reviews.","You have submitted no reviews."
