--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -33,7 +33,7 @@
 "Host","Host"
 "I agree to the above terms and conditions.","I agree to the above terms and conditions."
 "Installation Progress","Installation Progress"
-"Installer does not exist for %s database type","Installer does not exist for %s database type"
+"Installer does not exist for %s database engine","Installer does not exist for %s database engine"
 "Installing Maho","Installing Maho"
 "Just a moment...","Just a moment..."
 "Last Name","Last Name"
@@ -42,7 +42,7 @@
 "Localization","Localization"
 "Login Information","Login Information"
 "Maho Installation Wizard","Maho Installation Wizard"
-"No resource for %s DB model.","No resource for %s DB model."
+"No resource for %s database engine.","No resource for %s database engine."
 "One of PHP Extensions ""%s"" must be loaded.","One of PHP Extensions ""%s"" must be loaded."
 "Password","Password"
 "Password Confirmation","Password Confirmation"
@@ -76,3 +76,4 @@
 "Welcome to Maho's Installation Wizard","Welcome to Maho's Installation Wizard"
 "You're All Set","You're All Set"
 "You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock","You can specify server port, ex.: localhost:3307<br />If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock"
+"You can specify server port, ex.: localhost:5432","You can specify server port, ex.: localhost:5432"
