Add missing translations for SQLite installer

--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -13,6 +13,8 @@
 "Database","Database"
 "Database Connection","Database Connection"
 "Database connection error.","Database connection error."
+"Database File Path","Database File Path"
+"Database file path","Database file path"
 "Database host","Database host"
 "Database Name","Database Name"
 "Database Name cannot be empty.","Database Name cannot be empty."
@@ -27,6 +29,7 @@
 "Enable Charts","Enable Charts"
 "File System","File System"
 "First Name","First Name"
+"For production with multiple concurrent users, consider MySQL or PostgreSQL.","For production with multiple concurrent users, consider MySQL or PostgreSQL."
 "Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
 "Go to Backend","Go to Backend"
 "Go to Frontend","Go to Frontend"
@@ -55,6 +58,7 @@
 "Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
 "Please wait while we set up your store...","Please wait while we set up your store..."
 "Provide a complete base URL for SSL connection. For example: %s","Provide a complete base URL for SSL connection. For example: %s"
+"Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database","Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database"
 "Required Fields","Required Fields"
 "Response from server isn't valid.","Response from server isn't valid."
 "Run admin interface with SSL","Run admin interface with SSL"
@@ -62,7 +66,10 @@
 "Save Session Files In","Save Session Files In"
 "Secure Base URL","Secure Base URL"
 "Session Storage Options","Session Storage Options"
+"SQLite is ideal for development, testing, and small single-user stores.","SQLite is ideal for development, testing, and small single-user stores."
+"SQLite Notes:","SQLite Notes:"
 "Tables Prefix","Tables Prefix"
+"The database file will be created automatically if it does not exist.","The database file will be created automatically if it does not exist."
 "The database server version doesn't match system requirements (required: %s, actual: %s).","The database server version doesn't match system requirements (required: %s, actual: %s)."
 "The table prefix should contain only letters (a-z), numbers (0-9) or underscores (_), the first character should be a letter.","The table prefix should contain only letters (a-z), numbers (0-9) or underscores (_), the first character should be a letter."
 "The URL ""%s"" is invalid.","The URL ""%s"" is invalid."
