Added AJAX add to cart with offcanvas minicart
- CartController::addAction() now supports AJAX requests via isAjax parameter
- Returns JSON with success status, message, cart qty, and minicart HTML
- Product view form now uses mahoFetch() for async submission
- After successful add, minicart content updates and offcanvas opens
- Added openOffcanvas() method to Minicart class
- Made minicart globally accessible as window.minicart
- Minicart JS now initializes even when cart is empty
- Moved message divs inside .minicart-wrapper for proper offcanvas display

--- a/app/locale/en_US/Mage_Checkout.csv
+++ b/app/locale/en_US/Mage_Checkout.csv
@@ -139,6 +139,7 @@
 "Incl. Tax","Incl. Tax"
 "Invalid checkout type.","Invalid checkout type."
 "Invalid data.","Invalid data."
+"Invalid form key. Please refresh the page.","Invalid form key. Please refresh the page."
 "Invalid method: %s","Invalid method: %s"
 "Invalid shipping method.","Invalid shipping method."
 "Item not found or already ordered","Item not found or already ordered"
@@ -228,6 +229,7 @@
 "Proceed to Checkout","Proceed to Checkout"
 "Product","Product"
 "Product Name","Product Name"
+"Product not found.","Product not found."
 "Products","Products"
 "Qty","Qty"
 "Qty:","Qty:"
