Added SQLite database support (#430)

--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -13,6 +13,7 @@
 "Database","Database"
 "Database Connection","Database Connection"
 "Database connection error.","Database connection error."
+"Database File Path","Database File Path"
 "Database host","Database host"
 "Database Name","Database Name"
 "Database Name cannot be empty.","Database Name cannot be empty."
@@ -55,6 +56,7 @@
 "Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
 "Please wait while we set up your store...","Please wait while we set up your store..."
 "Provide a complete base URL for SSL connection. For example: %s","Provide a complete base URL for SSL connection. For example: %s"
+"Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database","Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database"
 "Required Fields","Required Fields"
 "Response from server isn't valid.","Response from server isn't valid."
 "Run admin interface with SSL","Run admin interface with SSL"
