--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -455,6 +455,7 @@
 "Orders","Orders"
 "Orders and Returns","Orders and Returns"
 "Orders and Returns Search Form","Orders and Returns Search Form"
+"Orders Based on This Profile","Orders Based on This Profile"
 "Order saving error: %s","Order saving error: %s"
 "Order shipments","Order shipments"
 "Order State","Order State"
@@ -762,9 +763,11 @@
 "The profile state has been updated.","The profile state has been updated."
 "The quantity you want to add exceeds the total shipped quantity for some of selected Product(s)","The quantity you want to add exceeds the total shipped quantity for some of selected Product(s)"
 "There are no billing agreements yet.","There are no billing agreements yet."
+"There are no orders yet.","There are no orders yet."
 "There are no printable documents related to selected orders.","There are no printable documents related to selected orders."
 "There are no shipping labels related to selected orders.","There are no shipping labels related to selected orders."
 "There are no shipping labels related to selected shipments.","There are no shipping labels related to selected shipments."
+"There are no recurring profiles yet.","There are no recurring profiles yet."
 "There is no need to approve this payment.","There is no need to approve this payment."
 "There is no need to deny this payment.","There is no need to deny this payment."
 "There is no update for the payment.","There is no update for the payment."
