--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -456,6 +456,7 @@
 "Orders and Returns","Orders and Returns"
 "Orders and Returns Search Form","Orders and Returns Search Form"
 "Order saving error: %s","Order saving error: %s"
+"Orders Based on This Profile","Orders Based on This Profile"
 "Order shipments","Order shipments"
 "Order State","Order State"
 "Order Status","Order Status"
@@ -762,7 +763,9 @@
 "The profile state has been updated.","The profile state has been updated."
 "The quantity you want to add exceeds the total shipped quantity for some of selected Product(s)","The quantity you want to add exceeds the total shipped quantity for some of selected Product(s)"
 "There are no billing agreements yet.","There are no billing agreements yet."
+"There are no orders yet.","There are no orders yet."
 "There are no printable documents related to selected orders.","There are no printable documents related to selected orders."
+"There are no recurring profiles yet.","There are no recurring profiles yet."
 "There are no shipping labels related to selected orders.","There are no shipping labels related to selected orders."
 "There are no shipping labels related to selected shipments.","There are no shipping labels related to selected shipments."
 "There is no need to approve this payment.","There is no need to approve this payment."
