Add missing translations and update PHPStorm metadata
- Add remaining missing translations for gift card module
- Regenerate PHPStorm metadata files for IDE support

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -156,3 +156,41 @@
 "Please enter a valid email address.","Please enter a valid email address."
 "Please enter a valid number.","Please enter a valid number."
 "Please enter a value greater than zero.","Please enter a value greater than zero."
+"Created","Created"
+"Gift Card Transaction History","Gift Card Transaction History"
+"Balance Before","Balance Before"
+"Balance After","Balance After"
+"This order will be fully paid by the gift card(s)","This order will be fully paid by the gift card(s)"
+"Gift Cards Applied","Gift Cards Applied"
+"Total Gift Card Amount","Total Gift Card Amount"
+"Error generating gift card PDF: %s","Error generating gift card PDF: %s"
+"Gift card amount cannot be less than %s","Gift card amount cannot be less than %s"
+"Gift card amount cannot be more than %s","Gift card amount cannot be more than %s"
+"Please select a valid gift card amount","Please select a valid gift card amount"
+"Gift Certificates","Gift Certificates"
+"Gift Card History","Gift Card History"
+"Create Gift Card Products","Create Gift Card Products"
+"Created %d gift card product(s): %s","Created %d gift card product(s): %s"
+"This gift card no longer exists.","This gift card no longer exists."
+"The gift card has been saved.","The gift card has been saved."
+"The gift card has been deleted.","The gift card has been deleted."
+"Unable to find a gift card to delete.","Unable to find a gift card to delete."
+"Please select gift card(s).","Please select gift card(s)."
+"Please enter a gift card code.","Please enter a gift card code."
+"Gift cards cannot be used to purchase gift card products.","Gift cards cannot be used to purchase gift card products."
+"Gift card ""%s"" is not valid.","Gift card ""%s"" is not valid."
+"Gift card ""%s"" is pending activation.","Gift card ""%s"" is pending activation."
+"Gift card ""%s"" has expired.","Gift card ""%s"" has expired."
+"Gift card ""%s"" has been fully used.","Gift card ""%s"" has been fully used."
+"Gift card ""%s"" is not active.","Gift card ""%s"" is not active."
+"Gift card ""%s"" is already applied.","Gift card ""%s"" is already applied."
+"Gift card ""%s"" was applied.","Gift card ""%s"" was applied."
+"Gift card was removed.","Gift card was removed."
+"Cannot remove gift card.","Cannot remove gift card."
+"Gift Cards Configuration","Gift Cards Configuration"
+"Gift Card Notification Email","Gift Card Notification Email"
+"Enable Gift Cards","Enable Gift Cards"
+"Gift Card Code Length","Gift Card Code Length"
+"Number of characters in generated codes","Number of characters in generated codes"
+"Gift Card Code Prefix","Gift Card Code Prefix"
+"Prefix for generated codes (e.g., GC)","Prefix for generated codes (e.g., GC)"
