Fix CI issues: code style, translations, and metadata
- Apply PHP CS Fixer formatting to all gift card module files
- Remove unused translations from CSV file
- Regenerate PHPStorm metadata for IDE support
- Ensure all files pass CI validation checks

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -3,46 +3,33 @@
 "Active","Active"
 "Add New Gift Card","Add New Gift Card"
 "Admin Comment","Admin Comment"
-"A gift card has been sent to you!","A gift card has been sent to you!"
-"Allow customers to include a personal message","Allow customers to include a personal message"
-"Allow Message","Allow Message"
 "All Websites","All Websites"
+"Amount","Amount"
 "Amount cannot exceed ","Amount cannot exceed "
 "Amount must be at least ","Amount must be at least "
-"Amount Used","Amount Used"
 "Applied Gift Cards","Applied Gift Cards"
 "Apply","Apply"
-"Are you sure you want to generate a new code? The old code will be replaced.","Are you sure you want to generate a new code? The old code will be replaced."
 "Are you sure you want to remove this gift card?","Are you sure you want to remove this gift card?"
 "Automatically send email when gift card is created with recipient email","Automatically send email when gift card is created with recipient email"
-"Available Amounts","Available Amounts"
 "Balance","Balance"
-"Balance: %s","Balance: %s"
 "Balance After","Balance After"
 "Balance Before","Balance Before"
-"Can be redeemed in online store","Can be redeemed in online store"
 "Cannot remove gift card.","Cannot remove gift card."
-"Change Status","Change Status"
 "Code","Code"
-"Combined Gift Card","Combined Gift Card"
 "Created","Created"
 "Created %d gift card product(s): %s","Created %d gift card product(s): %s"
 "Created At","Created At"
 "Create Gift Card Products","Create Gift Card Products"
 "Currency Code","Currency Code"
-"Current Balance","Current Balance"
-"Custom Amount","Custom Amount"
 "Date","Date"
 "Default Expiry (days)","Default Expiry (days)"
 "Default number of days until gift card expires (0 = never expires, can be overridden per card)","Default number of days until gift card expires (0 = never expires, can be overridden per card)"
-"Delete","Delete"
 "Delete","Delete"
 "Delete Gift Card","Delete Gift Card"
 "Delivery Date","Delivery Date"
 "Edit","Edit"
 "Edit Gift Card '%s'","Edit Gift Card '%s'"
 "Email identity to use as sender","Email identity to use as sender"
-"Email sent successfully to %s","Email sent successfully to %s"
 "Email Settings","Email Settings"
 "Email template to use when sending gift cards to recipients","Email template to use when sending gift cards to recipients"
 "Enable Barcode","Enable Barcode"
@@ -54,14 +41,7 @@
 "Expired","Expired"
 "Expires","Expires"
 "Expires At","Expires At"
-"Export to CSV","Export to CSV"
-"Export to XML","Export to XML"
-"Failed to send email","Failed to send email"
-"Fixed Amount","Fixed Amount"
-"Free - Order covered by Gift Card","Free - Order covered by Gift Card"
-"From: %s","From: %s"
 "Generate barcodes (Code128) for gift cards","Generate barcodes (Code128) for gift cards"
-"Generate New Code","Generate New Code"
 "Generate QR codes for gift cards (scannable in POS)","Generate QR codes for gift cards (scannable in POS)"
 "Gift Card","Gift Card"
 "Gift card ""%s"" has been fully used.","Gift card ""%s"" has been fully used."
@@ -71,79 +51,38 @@
 "Gift card ""%s"" is not valid.","Gift card ""%s"" is not valid."
 "Gift card ""%s"" is pending activation.","Gift card ""%s"" is pending activation."
 "Gift card ""%s"" was applied.","Gift card ""%s"" was applied."
-"Gift Card (%s)","Gift Card (%s)"
-"Gift Card added to cart","Gift Card added to cart"
 "Gift Card Amount","Gift Card Amount"
 "Gift card amount cannot be less than %s","Gift card amount cannot be less than %s"
 "Gift card amount cannot be more than %s","Gift card amount cannot be more than %s"
-"Gift card applied successfully","Gift card applied successfully"
-"Gift card balance: %s","Gift card balance: %s"
-"Gift Card Code","Gift Card Code"
-"Gift Card Code: %s","Gift Card Code: %s"
-"Gift card code cannot be empty","Gift card code cannot be empty"
-"Gift card code is required","Gift card code is required"
 "Gift Card Code Length","Gift Card Code Length"
 "Gift Card Code Prefix","Gift Card Code Prefix"
-"Gift Card Configuration","Gift Card Configuration"
-"Gift card deleted successfully","Gift card deleted successfully"
-"Gift Card Discount","Gift Card Discount"
 "Gift Card Email Template","Gift Card Email Template"
-"Gift card has expired","Gift card has expired"
-"Gift card has no remaining balance","Gift card has no remaining balance"
 "Gift Card History","Gift Card History"
 "Gift Card Information","Gift Card Information"
-"Gift Card Management","Gift Card Management"
-"Gift card not found","Gift card not found"
-"Gift Card Notification","Gift Card Notification"
 "Gift Card Notification Email","Gift Card Notification Email"
 "Gift Card Options","Gift Card Options"
-"Gift Card Payment","Gift Card Payment"
-"Gift Card Products","Gift Card Products"
-"Gift card removed successfully","Gift card removed successfully"
-"Gift Card Reports","Gift Card Reports"
 "Gift Cards","Gift Cards"
-"Gift Card Sales Report","Gift Card Sales Report"
 "Gift Cards Applied","Gift Cards Applied"
-"Gift card saved successfully","Gift card saved successfully"
 "Gift cards cannot be used to purchase gift card products.","Gift cards cannot be used to purchase gift card products."
 "Gift Cards Configuration","Gift Cards Configuration"
 "Gift Card Transaction History","Gift Card Transaction History"
-"Gift Card Type","Gift Card Type"
-"Gift Card Usage Report","Gift Card Usage Report"
 "Gift card was removed.","Gift card was removed."
 "Gift Certificates","Gift Certificates"
 "Inactive","Inactive"
 "Include barcode in PDF exports","Include barcode in PDF exports"
 "Include QR code in PDF exports","Include QR code in PDF exports"
 "Initial Balance","Initial Balance"
-"Invalid gift card code","Invalid gift card code"
-"Is Redeemable","Is Redeemable"
-"Lifetime (days)","Lifetime (days)"
-"Manage Gift Cards","Manage Gift Cards"
-"Mass Actions","Mass Actions"
-"Max Amount","Max Amount"
 "Maximum 500 characters","Maximum 500 characters"
 "Message:","Message:"
-"Min Amount","Min Amount"
-"New code generated successfully","New code generated successfully"
 "New Gift Card","New Gift Card"
 "No additional payment is required.","No additional payment is required."
-"No orders found for this gift card","No orders found for this gift card"
 "Number of characters in generated codes","Number of characters in generated codes"
-"Number of days the gift card is valid (0 = never expires)","Number of days the gift card is valid (0 = never expires)"
 "Optional","Optional"
 "Optional - Leave blank for immediate delivery","Optional - Leave blank for immediate delivery"
 "Order #","Order #"
 "Order History","Order History"
-"Original Amount","Original Amount"
-"Outstanding Balance","Outstanding Balance"
 "Personal Message","Personal Message"
-"Physical Gift Card","Physical Gift Card"
 "Please enter a gift card code.","Please enter a gift card code."
-"Please enter all required gift card options","Please enter all required gift card options"
-"Please enter a valid email address.","Please enter a valid email address."
-"Please enter a valid number.","Please enter a valid number."
-"Please enter a value greater than zero.","Please enter a value greater than zero."
 "Please select a valid gift card amount","Please select a valid gift card amount"
 "Please select gift card(s).","Please select gift card(s)."
 "Prefix for generated codes (e.g., GC)","Prefix for generated codes (e.g., GC)"
@@ -152,10 +91,8 @@
 "Recipient Email","Recipient Email"
 "Recipient Information","Recipient Information"
 "Recipient Name","Recipient Name"
-"Remaining balance after this order: %s","Remaining balance after this order: %s"
 "Remove","Remove"
 "Remove Gift Card","Remove Gift Card"
-"Resend Email","Resend Email"
 "Save And Continue Edit","Save And Continue Edit"
 "Save Gift Card","Save Gift Card"
 "Select Amount","Select Amount"
@@ -168,29 +105,16 @@
 "Status","Status"
 "The gift card has been deleted.","The gift card has been deleted."
 "The gift card has been saved.","The gift card has been saved."
-"This gift card expires on %s","This gift card expires on %s"
-"This gift card has already been used and cannot be deleted","This gift card has already been used and cannot be deleted"
-"This gift card never expires","This gift card never expires"
 "This gift card no longer exists.","This gift card no longer exists."
 "This is a required field.","This is a required field."
 "This order will be fully paid by the gift card(s)","This order will be fully paid by the gift card(s)"
 "This order will be fully paid using the following gift card(s):","This order will be fully paid using the following gift card(s):"
-"To redeem this gift card, enter the code at checkout.","To redeem this gift card, enter the code at checkout."
 "Total Gift Card Amount","Total Gift Card Amount"
-"Total Redeemed","Total Redeemed"
-"Total Sold","Total Sold"
-"Unable to apply gift card","Unable to apply gift card"
-"Unable to delete gift card","Unable to delete gift card"
 "Unable to find a gift card to delete.","Unable to find a gift card to delete."
-"Unable to remove gift card","Unable to remove gift card"
-"Unable to save gift card","Unable to save gift card"
 "Updated At","Updated At"
 "Used","Used"
-"Used Amount","Used Amount"
 "View","View"
-"Virtual Gift Card","Virtual Gift Card"
 "Website","Website"
 "Your Email","Your Email"
-"Your Gift Card","Your Gift Card"
 "Your Name","Your Name"
 "Your order is fully covered by gift cards. No additional payment is required.","Your order is fully covered by gift cards. No additional payment is required."
