Fix remaining CI issues for gift card module
- Add missing 'Gift Card Code' translation
- Fix CSV file sorting and add newline at end
- Add #[\Override] attributes to all overridden methods
- Fix nullsafe operator usage
- Remove typed properties that cannot be typed in parent class
- Fix return types and method signatures for PHPStan compliance

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -54,6 +54,7 @@
 "Gift Card Amount","Gift Card Amount"
 "Gift card amount cannot be less than %s","Gift card amount cannot be less than %s"
 "Gift card amount cannot be more than %s","Gift card amount cannot be more than %s"
+"Gift Card Code","Gift Card Code"
 "Gift Card Code Length","Gift Card Code Length"
 "Gift Card Code Prefix","Gift Card Code Prefix"
 "Gift Card Email Template","Gift Card Email Template"
