--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -1,12 +1,11 @@
 "-- Please Select --","-- Please Select --"
 "Action","Action"
 "Active","Active"
+"Add a message...","Add a message..."
 "Add New Gift Card","Add New Gift Card"
 "Admin Comment","Admin Comment"
 "All Websites","All Websites"
 "Amount","Amount"
-"Amount cannot exceed ","Amount cannot exceed "
-"Amount must be at least ","Amount must be at least "
 "Applied Gift Cards","Applied Gift Cards"
 "Apply","Apply"
 "Are you sure you want to remove this gift card?","Are you sure you want to remove this gift card?"
@@ -26,7 +25,6 @@
 "Default number of days until gift card expires (0 = never expires, can be overridden per card)","Default number of days until gift card expires (0 = never expires, can be overridden per card)"
 "Delete","Delete"
 "Delete Gift Card","Delete Gift Card"
-"Delivery Date","Delivery Date"
 "Edit","Edit"
 "Edit Gift Card '%s'","Edit Gift Card '%s'"
 "Email identity to use as sender","Email identity to use as sender"
@@ -35,7 +33,6 @@
 "Enable Barcode","Enable Barcode"
 "Enable Gift Cards","Enable Gift Cards"
 "Enable QR Code","Enable QR Code"
-"Enter Amount","Enter Amount"
 "Enter gift card code","Enter gift card code"
 "Error generating gift card PDF: %s","Error generating gift card PDF: %s"
 "Expired","Expired"
@@ -51,7 +48,6 @@
 "Gift card ""%s"" is not valid.","Gift card ""%s"" is not valid."
 "Gift card ""%s"" is pending activation.","Gift card ""%s"" is pending activation."
 "Gift card ""%s"" was applied.","Gift card ""%s"" was applied."
-"Gift Card Amount","Gift Card Amount"
 "Gift card amount cannot be less than %s","Gift card amount cannot be less than %s"
 "Gift card amount cannot be more than %s","Gift card amount cannot be more than %s"
 "Gift Card Code","Gift Card Code"
@@ -73,13 +69,12 @@
 "Include barcode in PDF exports","Include barcode in PDF exports"
 "Include QR code in PDF exports","Include QR code in PDF exports"
 "Initial Balance","Initial Balance"
-"Maximum 500 characters","Maximum 500 characters"
+"Leave blank for immediate delivery","Leave blank for immediate delivery"
 "Message:","Message:"
 "New Gift Card","New Gift Card"
 "No additional payment is required.","No additional payment is required."
 "Number of characters in generated codes","Number of characters in generated codes"
 "Optional","Optional"
-"Optional - Leave blank for immediate delivery","Optional - Leave blank for immediate delivery"
 "Order #","Order #"
 "Order History","Order History"
 "Personal Message","Personal Message"
@@ -90,16 +85,15 @@
 "Print PDF","Print PDF"
 "QR Code & Barcode","QR Code & Barcode"
 "Recipient Email","Recipient Email"
-"Recipient Information","Recipient Information"
 "Recipient Name","Recipient Name"
 "Remove","Remove"
 "Remove Gift Card","Remove Gift Card"
 "Save And Continue Edit","Save And Continue Edit"
 "Save Gift Card","Save Gift Card"
+"Schedule Delivery","Schedule Delivery"
 "Select Amount","Select Amount"
 "Send Email","Send Email"
 "Send Email on Creation","Send Email on Creation"
-"Sender Information","Sender Information"
 "Send gift card email to %s?","Send gift card email to %s?"
 "Show Barcode in PDF","Show Barcode in PDF"
 "Show QR Code in PDF","Show QR Code in PDF"
