Improve layered navigation UI and add price input filter mode
Active Filters section:
- Redesigned with tag/chip-based UI matching layered nav style
- Header with "Active Filters" title and "Clear All" link on same row
- Filter tags with label, value, and corner X remove button
- Subtle red hover effect on tags

Price filter input mode:
- Added new "Input fields (from - to)" option for price navigation
- Renders From/To input fields with currency symbol
- Small arrow button to apply filter
- Set as default price navigation mode
- Configurable in System > Config > Catalog > Layered Navigation

Other improvements:
- Hide filter attributes with only 1 option (not useful to filter)
- Updated swatch filter tags to match new design
- Added translations for new strings

--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -437,6 +437,7 @@
 "In Database:","In Database:"
 "In File:","In File:"
 "Informational","Informational"
+"Input fields (from - to)","Input fields (from - to)"
 "Insert Variable...","Insert Variable..."
 "Interactive","Interactive"
 "Interface Locale: %s","Interface Locale: %s"
