--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -11,6 +11,7 @@
 "86400 by default, if not set. To refresh instantly, Clear the Blocks HTML Output Cache.","86400 by default, if not set. To refresh instantly, Clear the Blocks HTML Output Cache."
 "<strong style=""color:red"">Warning!</strong> Applying MAP by default will hide all product prices on the frontend.","<strong style=""color:red"">Warning!</strong> Applying MAP by default will hide all product prices on the frontend."
 "Action","Action"
+"Active Filters","Active Filters"
 "Actual Price","Actual Price"
 "Add","Add"
 "Add Attribute","Add Attribute"
@@ -75,7 +76,9 @@
 "An invalid option ID is specified for %s (%s), skipping the record.","An invalid option ID is specified for %s (%s), skipping the record."
 "An invalid store was specified.","An invalid store was specified."
 "Applicable to catalog products and categories only. Any media content will be inserted into editor as a static URL. It is not updated if the system configuration base URL changes.","Applicable to catalog products and categories only. Any media content will be inserted into editor as a static URL. It is not updated if the system configuration base URL changes."
+"Apply","Apply"
 "Apply MAP (Default Value)","Apply MAP (Default Value)"
+"Apply price filter","Apply price filter"
 "Apply To","Apply To"
 "Approved","Approved"
 "A product type is not defined for the indexer.","A product type is not defined for the indexer."
@@ -211,7 +214,6 @@
 "Create Product Settings","Create Product Settings"
 "Create Simple Associated Product","Create Simple Associated Product"
 "Cross-sells","Cross-sells"
-"Currently Shopping by:","Currently Shopping by:"
 "Custom Design","Custom Design"
 "Customer Group","Customer Group"
 "Customers Reviews","Customers Reviews"
@@ -305,6 +307,7 @@
 "Fixed","Fixed"
 "For internal use.","For internal use."
 "For the last time placed.","For the last time placed."
+"From","From"
 "Frontend","Frontend"
 "Frontend Properties","Frontend Properties"
 "Gallery","Gallery"
@@ -562,13 +565,13 @@
 "Remove attribute from attribute set","Remove attribute from attribute set"
 "Remove attribute set","Remove attribute set"
 "Remove custom option","Remove custom option"
+"Remove filter: %s","Remove filter: %s"
 "Remove group from attribute set","Remove group from attribute set"
 "Remove option","Remove option"
 "Remove product assignment","Remove product assignment"
 "Remove Product From Websites","Remove Product From Websites"
 "Remove product image","Remove product image"
 "Remove product link","Remove product link"
-"Remove This Item","Remove This Item"
 "Remove value from custom option","Remove value from custom option"
 "Rename existing group","Rename existing group"
 "Rename group","Rename group"
@@ -728,6 +731,7 @@
 "Tier Pricing","Tier Pricing"
 "Tile","Tile"
 "Title","Title"
+"To","To"
 "Top/Left","Top/Left"
 "Top/Right","Top/Right"
 "To reindex the enabled product(s), the store or product must be specified","To reindex the enabled product(s), the store or product must be specified"
