Added Parent Products tab to product edit form
When editing a simple, virtual, or downloadable product in the admin,
a new "Parent Products" tab shows which configurable, grouped, or bundle
products use it as a child. This helps catalog managers quickly identify
parent relationships without searching the grid or querying the database.

Features:
- AJAX-loaded tab for performance (queries only run when tab is clicked)
- Shows parent product ID, SKU, name, type, and status
- Direct edit link to parent products
- Standard grid with filtering and pagination

--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -466,6 +466,7 @@
 "Page Title Separator","Page Title Separator"
 "Parent category is equal to child category.","Parent category is equal to child category."
 "Parent category was not found.","Parent category was not found."
+"Parent Products","Parent Products"
 "Pending","Pending"
 "Pending Reviews RSS","Pending Reviews RSS"
 "Percentage","Percentage"
