Fixed translations: added missing, removed unused

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -6,9 +6,7 @@
 "Admin Comment","Admin Comment"
 "All Websites","All Websites"
 "Amount","Amount"
-"Applied Gift Cards","Applied Gift Cards"
 "Apply","Apply"
-"Are you sure you want to remove this gift card?","Are you sure you want to remove this gift card?"
 "Automatically send email when gift card is created with recipient email","Automatically send email when gift card is created with recipient email"
 "Balance","Balance"
 "Balance After","Balance After"
@@ -66,10 +64,12 @@
 "Gift card was removed.","Gift card was removed."
 "Gift Certificates","Gift Certificates"
 "Inactive","Inactive"
+"Insufficient balance on gift card %s","Insufficient balance on gift card %s"
 "Include barcode in PDF exports","Include barcode in PDF exports"
 "Include QR code in PDF exports","Include QR code in PDF exports"
 "Initial Balance","Initial Balance"
 "Leave blank for immediate delivery","Leave blank for immediate delivery"
+"Manage Gift Cards","Manage Gift Cards"
 "Message:","Message:"
 "New Gift Card","New Gift Card"
 "No additional payment is required.","No additional payment is required."
@@ -87,7 +87,6 @@
 "Recipient Email","Recipient Email"
 "Recipient Name","Recipient Name"
 "Remove","Remove"
-"Remove Gift Card","Remove Gift Card"
 "Save And Continue Edit","Save And Continue Edit"
 "Save Gift Card","Save Gift Card"
 "Schedule Delivery","Schedule Delivery"
