refactor(installer): Minor cleanup of installer styles and wording

--- a/app/locale/en_US/Mage_Install.csv
+++ b/app/locale/en_US/Mage_Install.csv
@@ -26,6 +26,7 @@
 "Email","Email"
 "Email Address","Email Address"
 "Enable Charts","Enable Charts"
+"Ensure the URL ends with a trailing slash (/). For example: %s","Ensure the URL ends with a trailing slash (/). For example: %s"
 "File System","File System"
 "First Name","First Name"
 "Get ready to experience Open-Source eCommerce Evolved.","Get ready to experience Open-Source eCommerce Evolved."
@@ -55,7 +56,6 @@
 "Please correct the user data and try again.","Please correct the user data and try again."
 "Please set all required settings before clicking Continue","Please set all required settings before clicking Continue"
 "Please wait while we set up your store...","Please wait while we set up your store..."
-"Provide a complete base URL for SSL connection. For example: %s","Provide a complete base URL for SSL connection. For example: %s"
 "Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database","Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database"
 "Required Fields","Required Fields"
 "Response from server isn't valid.","Response from server isn't valid."
