--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -1,4 +1,5 @@
 "-- Please Select --","-- Please Select --"
+"0 = never expires","0 = never expires"
 "Action","Action"
 "Active","Active"
 "Add a message...","Add a message..."
@@ -7,12 +8,13 @@
 "All Websites","All Websites"
 "Amount","Amount"
 "Apply","Apply"
-"Automatically send email when gift card is created with recipient email","Automatically send email when gift card is created with recipient email"
 "Balance","Balance"
 "Balance After","Balance After"
 "Balance Before","Balance Before"
 "Cannot remove gift card.","Cannot remove gift card."
 "Code","Code"
+"Code Length","Code Length"
+"Code Prefix (e.g., GC)","Code Prefix (e.g., GC)"
 "Created","Created"
 "Created %d gift card product(s): %s","Created %d gift card product(s): %s"
 "Created At","Created At"
@@ -20,24 +22,19 @@
 "Currency Code","Currency Code"
 "Date","Date"
 "Default Expiry (days)","Default Expiry (days)"
-"Default number of days until gift card expires (0 = never expires, can be overridden per card)","Default number of days until gift card expires (0 = never expires, can be overridden per card)"
 "Delete","Delete"
 "Delete Gift Card","Delete Gift Card"
 "Edit","Edit"
 "Edit Gift Card '%s'","Edit Gift Card '%s'"
-"Email identity to use as sender","Email identity to use as sender"
+"Email Sender","Email Sender"
 "Email Settings","Email Settings"
-"Email template to use when sending gift cards to recipients","Email template to use when sending gift cards to recipients"
-"Enable Barcode","Enable Barcode"
+"Email Template","Email Template"
 "Enable Gift Cards","Enable Gift Cards"
-"Enable QR Code","Enable QR Code"
 "Enter gift card code","Enter gift card code"
 "Error generating gift card PDF: %s","Error generating gift card PDF: %s"
 "Expired","Expired"
 "Expires","Expires"
 "Expires At","Expires At"
-"Generate barcodes (Code128) for gift cards","Generate barcodes (Code128) for gift cards"
-"Generate QR codes for gift cards (scannable in POS)","Generate QR codes for gift cards (scannable in POS)"
 "Gift Card","Gift Card"
 "Gift card ""%s"" has been fully used.","Gift card ""%s"" has been fully used."
 "Gift card ""%s"" has expired.","Gift card ""%s"" has expired."
@@ -49,9 +46,6 @@
 "Gift card amount cannot be less than %s","Gift card amount cannot be less than %s"
 "Gift card amount cannot be more than %s","Gift card amount cannot be more than %s"
 "Gift Card Code","Gift Card Code"
-"Gift Card Code Length","Gift Card Code Length"
-"Gift Card Code Prefix","Gift Card Code Prefix"
-"Gift Card Email Template","Gift Card Email Template"
 "Gift Card History","Gift Card History"
 "Gift Card Information","Gift Card Information"
 "Gift Card Notification Email","Gift Card Notification Email"
@@ -64,8 +58,6 @@
 "Gift card was removed.","Gift card was removed."
 "Gift Certificates","Gift Certificates"
 "Inactive","Inactive"
-"Include barcode in PDF exports","Include barcode in PDF exports"
-"Include QR code in PDF exports","Include QR code in PDF exports"
 "Initial Balance","Initial Balance"
 "Insufficient balance on gift card %s","Insufficient balance on gift card %s"
 "Leave blank for immediate delivery","Leave blank for immediate delivery"
@@ -73,7 +65,6 @@
 "Message:","Message:"
 "New Gift Card","New Gift Card"
 "No additional payment is required.","No additional payment is required."
-"Number of characters in generated codes","Number of characters in generated codes"
 "Optional","Optional"
 "Order #","Order #"
 "Order History","Order History"
@@ -81,7 +72,6 @@
 "Please enter a gift card code.","Please enter a gift card code."
 "Please select a valid gift card amount","Please select a valid gift card amount"
 "Please select gift card(s).","Please select gift card(s)."
-"Prefix for generated codes (e.g., GC)","Prefix for generated codes (e.g., GC)"
 "Print PDF","Print PDF"
 "QR Code & Barcode","QR Code & Barcode"
 "Recipient Email","Recipient Email"
@@ -92,10 +82,9 @@
 "Schedule Delivery","Schedule Delivery"
 "Select Amount","Select Amount"
 "Send Email","Send Email"
-"Send Email on Creation","Send Email on Creation"
 "Send gift card email to %s?","Send gift card email to %s?"
-"Show Barcode in PDF","Show Barcode in PDF"
-"Show QR Code in PDF","Show QR Code in PDF"
+"Show Barcode (Code128)","Show Barcode (Code128)"
+"Show QR Code","Show QR Code"
 "Status","Status"
 "The gift card has been deleted.","The gift card has been deleted."
 "The gift card has been saved.","The gift card has been saved."
