Add missing translations for gift card module

--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -1,6 +1,8 @@
 "-- Please Select --","-- Please Select --"
-"0 = never expires","0 = never expires"
+"0 = never expires. Can be overridden per product.","0 = never expires. Can be overridden per product."
 "Action","Action"
+"Allow Message","Allow Message"
+"Amount Range","Amount Range"
 "Active","Active"
 "Add a message...","Add a message..."
 "Add New Gift Card","Add New Gift Card"
@@ -12,9 +14,12 @@
 "Balance After","Balance After"
 "Balance Before","Balance Before"
 "Cannot remove gift card.","Cannot remove gift card."
+"Can be overridden per product.","Can be overridden per product."
+"Card Type","Card Type"
 "Code","Code"
 "Code Length","Code Length"
 "Code Prefix (e.g., GC)","Code Prefix (e.g., GC)"
+"Comma-separated values (e.g., 25,50,100)","Comma-separated values (e.g., 25,50,100)"
 "Created","Created"
 "Created %d gift card product(s): %s","Created %d gift card product(s): %s"
 "Created At","Created At"
@@ -22,6 +27,7 @@
 "Currency Code","Currency Code"
 "Date","Date"
 "Default Expiry (days)","Default Expiry (days)"
+"Default: %s","Default: %s"
 "Delete","Delete"
 "Delete Gift Card","Delete Gift Card"
 "Edit","Edit"
@@ -35,6 +41,9 @@
 "Expired","Expired"
 "Expires","Expires"
 "Expires At","Expires At"
+"Fixed Amount(s)","Fixed Amount(s)"
+"Fixed Amounts","Fixed Amounts"
+"Fixed + Range","Fixed + Range"
 "Gift Card","Gift Card"
 "Gift card ""%s"" has been fully used.","Gift card ""%s"" has been fully used."
 "Gift card ""%s"" has expired.","Gift card ""%s"" has expired."
@@ -60,9 +69,14 @@
 "Inactive","Inactive"
 "Initial Balance","Initial Balance"
 "Insufficient balance on gift card %s","Insufficient balance on gift card %s"
+"Is Redeemable","Is Redeemable"
 "Leave blank for immediate delivery","Leave blank for immediate delivery"
+"Leave empty to use system default. 0 = never expires.","Leave empty to use system default. 0 = never expires."
+"Lifetime (days)","Lifetime (days)"
 "Manage Gift Cards","Manage Gift Cards"
+"Maximum Amount","Maximum Amount"
 "Message:","Message:"
+"Minimum Amount","Minimum Amount"
 "New Gift Card","New Gift Card"
 "No additional payment is required.","No additional payment is required."
 "Optional","Optional"
@@ -95,6 +109,7 @@
 "Total Gift Card Amount","Total Gift Card Amount"
 "Unable to find a gift card to delete.","Unable to find a gift card to delete."
 "Updated At","Updated At"
+"Use Default (%s)","Use Default (%s)"
 "Used","Used"
 "View","View"
 "Website","Website"
