--- a/app/locale/en_US/Maho_Giftcard.csv
+++ b/app/locale/en_US/Maho_Giftcard.csv
@@ -5,6 +5,7 @@
 "Add a message...","Add a message..."
 "Add New Gift Card","Add New Gift Card"
 "Admin Comment","Admin Comment"
+"Allow Gift Message","Allow Gift Message"
 "Allow Message","Allow Message"
 "All Websites","All Websites"
 "Amount","Amount"
